# Goal-lineTechnology

GLTclient/: CMakeLists.txt
GLTclient/include/: GLTballDetect.h  GLTframeDetect.h  TCPclient.h
GLTclient/src/: GLTballDetect.cpp  GLTframeDetect.cpp  TCPclient.cpp  glt_client.cpp
GLTserver/: CMakeLists.txt
GLTserver/include/: TCPserver.h
GLTserver/src/: TCPserver.cpp  glt_server.cpp
client/include/: GLTframeDetect.h  TCPclient.h
client/src/: GLTframeDetect.cpp
meanCheck/: CMakeLists.txt  meanCheck.cpp
