set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} /home/pi/raspicam-0.1.3/build)
cmake_minimum_required(VERSION 2.8)
project(GLTclient)
find_package(raspicam REQUIRED)
find_package(OpenCV REQUIRED)
include_directories("${PROJECT_SOURCE_DIR}/include")
add_executable(mainClient src/mainClient.cpp src/GLTframeDetect.cpp src/TCPclient.cpp)
target_link_libraries(mainClient ${raspicam_CV_LIBS})
