set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} /home/pi/raspicam-0.1.3/build)
cmake_minimum_required(VERSION 2.8)
project(meanCheck)
find_package(raspicam REQUIRED)
find_package(OpenCV REQUIRED)
add_executable(meanCheck meanCheck.cpp)
target_link_libraries(meanCheck ${raspicam_CV_LIBS})